--- a/hbsrecover/ui/mainwindow.ui
+++ b/hbsrecover/ui/mainwindow.ui
@@ -6,78 +6,146 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1143</width>
-    <height>588</height>
+    <width>617</width>
+    <height>579</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Picsou</string>
+   <string>HBSRecover</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../picsou.qrc">
-    <normaloff>:/resources/euro-money-80x80.png</normaloff>:/resources/euro-money-80x80.png</iconset>
+   <iconset resource="../hbsrecover.qrc">
+    <normaloff>:/resources/hbsrecovery.png</normaloff>:/resources/hbsrecovery.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QTabWidget" name="tab_widget">
-      <property name="tabShape">
-       <enum>QTabWidget::Rounded</enum>
-      </property>
-      <property name="currentIndex">
-       <number>0</number>
-      </property>
-      <widget class="QWidget" name="details_tab">
-       <attribute name="icon">
-        <iconset resource="../picsou.qrc">
-         <normaloff>:/resources/material-design/svg/information-outline.svg</normaloff>:/resources/material-design/svg/information-outline.svg</iconset>
-       </attribute>
-       <attribute name="title">
-        <string>Details</string>
-       </attribute>
-      </widget>
-      <widget class="QWidget" name="search_tab">
-       <attribute name="icon">
-        <iconset resource="../picsou.qrc">
-         <normaloff>:/resources/material-design/svg/magnify.svg</normaloff>:/resources/material-design/svg/magnify.svg</iconset>
-       </attribute>
-       <attribute name="title">
-        <string>Search</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout"/>
-      </widget>
-      <widget class="QWidget" name="graph_tab">
-       <attribute name="icon">
-        <iconset resource="../picsou.qrc">
-         <normaloff>:/resources/material-design/svg/finance.svg</normaloff>:/resources/material-design/svg/finance.svg</iconset>
-       </attribute>
-       <attribute name="title">
-        <string>Charts</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="srcpath_label">
+        <property name="text">
+         <string>Source:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLabel" name="label">
+         <widget class="QLineEdit" name="srcpath"/>
+        </item>
+        <item>
+         <widget class="QToolButton" name="srcpath_btn">
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Charts coming soon* !&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>...</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_2">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
+         <widget class="QCheckBox" name="subfolders_cb">
           <property name="text">
-           <string>*or not, depends on developper free time...</string>
+           <string>Include subfolders</string>
           </property>
          </widget>
         </item>
        </layout>
-      </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="dstpath_label">
+        <property name="text">
+         <string>Destination:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLineEdit" name="dstpath"/>
+        </item>
+        <item>
+         <widget class="QToolButton" name="dstpath_btn">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="pswd_label">
+        <property name="text">
+         <string>Password:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QLineEdit" name="pswd">
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="pswd_cb">
+          <property name="text">
+           <string>Show</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="QListWidget" name="filelist">
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::NoSelection</enum>
+      </property>
      </widget>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="recover">
+        <property name="text">
+         <string>Recover</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -86,7 +154,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1143</width>
+     <width>617</width>
      <height>20</height>
     </rect>
    </property>
@@ -95,12 +163,9 @@
      <string>File</string>
     </property>
     <addaction name="separator"/>
-    <addaction name="action_new"/>
-    <addaction name="action_open"/>
-    <addaction name="action_close"/>
-    <addaction name="separator"/>
-    <addaction name="action_save"/>
-    <addaction name="action_save_as"/>
+    <addaction name="action_sel_src"/>
+    <addaction name="action_sel_dst"/>
+    <addaction name="action_recover"/>
     <addaction name="separator"/>
     <addaction name="action_quit"/>
    </widget>
@@ -108,90 +173,29 @@
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="action_about_picsou"/>
+    <addaction name="action_about_hbsrecover"/>
     <addaction name="action_about_qt"/>
     <addaction name="separator"/>
     <addaction name="action_report_an_issue"/>
     <addaction name="action_star_me_on_github"/>
     <addaction name="action_license"/>
    </widget>
-   <widget class="QMenu" name="settings_menu">
-    <property name="title">
-     <string>Settings</string>
-    </property>
-    <addaction name="action_preferences"/>
-   </widget>
    <addaction name="file_menu"/>
-   <addaction name="settings_menu"/>
    <addaction name="help_menu"/>
   </widget>
-  <widget class="QToolBar" name="toolbar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="action_new"/>
-   <addaction name="action_open"/>
-   <addaction name="action_close"/>
-   <addaction name="separator"/>
-   <addaction name="action_save"/>
-   <addaction name="separator"/>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QDockWidget" name="tree_dock">
-   <property name="windowIcon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/file-tree.svg</normaloff>:/resources/material-design/svg/file-tree.svg</iconset>
-   </property>
-   <property name="features">
-    <set>QDockWidget::DockWidgetFloatable</set>
-   </property>
-   <property name="allowedAreas">
-    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
-   </property>
-   <property name="windowTitle">
-    <string>Database tree</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents">
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
-      <widget class="QTreeWidget" name="tree">
-       <property name="animated">
-        <bool>true</bool>
-       </property>
-       <attribute name="headerVisible">
-        <bool>false</bool>
-       </attribute>
-       <column>
-        <property name="text">
-         <string notr="true">1</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-  </widget>
-  <action name="action_open">
+  <widget class="QStatusBar" name="status_bar"/>
+  <action name="action_sel_dst">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/folder-open.svg</normaloff>:/resources/material-design/svg/folder-open.svg</iconset>
+    <iconset resource="../hbsrecover.qrc">
+     <normaloff>:/resources/material-design/svg/code-greater-than.svg</normaloff>:/resources/material-design/svg/code-greater-than.svg</iconset>
    </property>
    <property name="text">
-    <string>Open...</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
+    <string>Select Destination...</string>
    </property>
   </action>
   <action name="action_quit">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
+    <iconset resource="../hbsrecover.qrc">
      <normaloff>:/resources/material-design/svg/exit-to-app.svg</normaloff>:/resources/material-design/svg/exit-to-app.svg</iconset>
    </property>
    <property name="text">
@@ -201,25 +205,22 @@
     <string>Ctrl+Q</string>
    </property>
   </action>
-  <action name="action_close">
+  <action name="action_recover">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/folder-remove.svg</normaloff>:/resources/material-design/svg/folder-remove.svg</iconset>
+    <iconset resource="../hbsrecover.qrc">
+     <normaloff>:/resources/material-design/svg/folder-lock-open.svg</normaloff>:/resources/material-design/svg/folder-lock-open.svg</iconset>
    </property>
    <property name="text">
-    <string>Close</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+W</string>
+    <string>Recover</string>
    </property>
   </action>
-  <action name="action_about_picsou">
+  <action name="action_about_hbsrecover">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/currency-eur.svg</normaloff>:/resources/material-design/svg/currency-eur.svg</iconset>
+    <iconset resource="../hbsrecover.qrc">
+     <normaloff>:/resources/hbsrecovery.png</normaloff>:/resources/hbsrecovery.png</iconset>
    </property>
    <property name="text">
-    <string>About Picsou...</string>
+    <string>About HBSRecover...</string>
    </property>
    <property name="shortcutVisibleInContextMenu">
     <bool>false</bool>
@@ -227,7 +228,7 @@
   </action>
   <action name="action_about_qt">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
+    <iconset resource="../hbsrecover.qrc">
      <normaloff>:/resources/qt_extended_48x48.png</normaloff>:/resources/qt_extended_48x48.png</iconset>
    </property>
    <property name="text">
@@ -236,48 +237,25 @@
   </action>
   <action name="action_star_me_on_github">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
+    <iconset resource="../hbsrecover.qrc">
      <normaloff>:/resources/material-design/svg/github-box.svg</normaloff>:/resources/material-design/svg/github-box.svg</iconset>
    </property>
    <property name="text">
     <string>Star me on Github...</string>
    </property>
   </action>
-  <action name="action_save">
+  <action name="action_sel_src">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/content-save.svg</normaloff>:/resources/material-design/svg/content-save.svg</iconset>
+    <iconset resource="../hbsrecover.qrc">
+     <normaloff>:/resources/material-design/svg/code-less-than.svg</normaloff>:/resources/material-design/svg/code-less-than.svg</iconset>
    </property>
    <property name="text">
-    <string>Save</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+S</string>
-   </property>
-  </action>
-  <action name="action_save_as">
-   <property name="text">
-    <string>Save as...</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Shift+S</string>
-   </property>
-  </action>
-  <action name="action_new">
-   <property name="icon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/folder-plus.svg</normaloff>:/resources/material-design/svg/folder-plus.svg</iconset>
-   </property>
-   <property name="text">
-    <string>New...</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+N</string>
+    <string>Select Source...</string>
    </property>
   </action>
   <action name="action_license">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
+    <iconset resource="../hbsrecover.qrc">
      <normaloff>:/resources/material-design/svg/book-open.svg</normaloff>:/resources/material-design/svg/book-open.svg</iconset>
    </property>
    <property name="text">
@@ -286,26 +264,17 @@
   </action>
   <action name="action_report_an_issue">
    <property name="icon">
-    <iconset resource="../picsou.qrc">
+    <iconset resource="../hbsrecover.qrc">
      <normaloff>:/resources/material-design/svg/bug.svg</normaloff>:/resources/material-design/svg/bug.svg</iconset>
    </property>
    <property name="text">
     <string>Report an issue...</string>
    </property>
   </action>
-  <action name="action_preferences">
-   <property name="icon">
-    <iconset resource="../picsou.qrc">
-     <normaloff>:/resources/material-design/svg/settings.svg</normaloff>:/resources/material-design/svg/settings.svg</iconset>
-   </property>
-   <property name="text">
-    <string>Preferences...</string>
-   </property>
-  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="../picsou.qrc"/>
+  <include location="../hbsrecover.qrc"/>
  </resources>
  <connections/>
 </ui>
